<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/cardView1"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:gravity="center"
        android:background="@drawable/profile_banner"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="#FFFEFE"
            app:cardBackgroundColor="@color/white"
            android:outlineAmbientShadowColor="@color/white"
            android:outlineSpotShadowColor="@color/white"
            app:cardCornerRadius="120dp">

            <ImageView
                android:id="@+id/imgFoto"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:foregroundTint="#FFFFFF"
                android:scaleType="centerCrop"
                android:src="@drawable/user1"
                android:contentDescription="@string/profile_nama" />
        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/profileText.nama"
            android:id="@+id/tvNama"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_nama"
            android:textStyle="bold" />

        <TextView
            style="@style/profileText.putih"
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_user" />
        <TextView
            style="@style/profileText.putih"
            android:id="@+id/tvRepo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_repo"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="16dp">
     <TextView
         style="@style/profileText"
         android:id="@+id/tvCompany"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/profile_company"/>

        <TextView
            style="@style/profileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/batas"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
        <TextView
            style="@style/profileText"
            android:id="@+id/tvAsal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_from"/>
    </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tab_text_1" />
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:background="@color/white"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>