<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:id="@+id/cvProfile">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp"
        android:background="@color/Nblue"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ImgDfoto"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/profile_photo"
            android:src="@drawable/user1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/profileText.hitam"
            android:id="@+id/tvDnama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/profile_nama"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/ImgDfoto"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDFollowers"
            style="@style/profileText.hitam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_folo"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/ImgDfoto"
            app:layout_constraintTop_toBottomOf="@+id/tvDnama" />

        <TextView
            style="@style/profileText.hitam"
            android:id="@+id/tvTRepo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_project"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/tvDFollowers"
            app:layout_constraintTop_toBottomOf="@+id/tvDnama"/>

        <TextView
            style="@style/profileText.hitam"
            android:id="@+id/tvDRepo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_project"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/tvTRepo"
            app:layout_constraintTop_toBottomOf="@+id/tvDnama"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>